--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Charanel Gile",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "http-status-codes": "^2.3.0",
     "mongoose": "^7.6.3"
   },
