--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "add2cart",
   "version": "1.0.0",
   "description": "Full Stack MERN E-Commerce Web App",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Charanel Gile",
